feat: merge GitHub changes, fix migrations, CORS, and proxy path
- Pulled 35 remote commits (Wave 12: VisualRuleBuilder, RuleSeeder,
  Aerospike feature store, RLS, Tracing, Billing, M-Pesa, Swagger)
- Resolved 12 merge conflicts keeping both sides: real wiring (local)
  + new features (remote)
- Fix V110 migration: conditional psp_id/merchant_id index creation for
  DBs that skipped intermediate migrations; alert index uses status+ts
- Fix V112 migration: ADD COLUMN IF NOT EXISTS case_reference before
  widening, safe for fresh migration runs
- Rename local V133/134/135 → V140/141/142 (avoid collision with
  GitHub's V133 user_settings, V134 payment_attempts, V135 prod indexes)
- Replace AerospikeFeatureStore Aerospike client with in-memory
  ConcurrentHashMap (no Aerospike server in test/build env)
- Remove duplicate BACKEND/BACKEND/ directory from bad GitHub path
- nginx: fix testaml proxy_pass path doubling (/api/ → /api/v1/ caused
  double v1; corrected to /api/ → /api/)
- nginx: CORS map supporting all *.hokeka.com subdomains + public IP
  (mobile apps, CRM, KDS can reach API without CORS block)
- nginx: add CORS headers to testapi.hokeka.com and api.hokeka.com

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>